src/main/kubernetes/openshift.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: feedback-form
  namespace: deep-dive-quarkus
  annotations:
    haproxy.router.openshift.io/hsts_header: max-age=31536000;includeSubDomains;preload
spec:
  host: feedback-form.apps.ocp4.klaassen.click
  to:
    kind: Service
    name: feedback-form
  tls:
    termination: "edge"
---
apiVersion: v1
kind: Pod
metadata:
  namespace: deep-dive-quarkus
  name: mariadb
  labels:
    app: mariadb
spec:
  containers:
    - name: mariadb
      image: registry.redhat.io/rhel9/mariadb-105
      ports:
        - containerPort: 3306
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: deep-dive-quarkus
spec:
  selector:
    app: mariadb
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
